Final: Corrected all internal asset paths for live deployment

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <div class="about-me">
                     <div class="about-me-description">
                         <!-- Mobile image inside text -->
-                        <img src="profile.jpg" alt="Raju Sambahamphe" class="about-me-float-image mobile-only">
+                        <img src="portfolio-file/profile.jpg" alt="Raju Sambahamphe" class="about-me-float-image mobile-only">
                         <p>
                             Hey there, I'm Raju! I'm a graphic designer with a passion for creativity, blending my love
                             for art,
@@ -95,7 +95,7 @@
 
                     <!-- Desktop-only image -->
                     <div class="about-me-image desktop-only">
-                        <img src="profile.jpg" alt="Raju Sambahamphe">
+                        <img src="portfolio-file/profile.jpg" alt="Raju Sambahamphe">
                     </div>
                 </div>
             </div>
@@ -171,9 +171,9 @@
         <section class="webpage-examples-section">
             <div class="content-wrapper">
                 <h1>Webpage Design </h1>
-                <button onclick="location.href='day1.html'">Tailor Page</button>
-                <button onclick="location.href='day10.html'">Reservation Form Page</button>
-                <button onclick="location.href='hotel.html'">Hotel Page</button>
+                <button onclick="location.href='portfolio-file/day1.html'">Tailor Page</button>
+                <button onclick="location.href='portfolio-file/day10.html'">Reservation Form Page</button>
+                <button onclick="location.href='portfolio-file/hotel.html'">Hotel Page</button>
             </div>
         </section>
 
@@ -333,81 +333,81 @@
             <div class="content-wrapper">
                 <div class="image-grid">
                     <!-- Row 1: 2 vertical, 1 horizontal -->
-                    <div class="vertical"><a href="menu1.svg" target="_blank"><img src="menu1.svg" alt="Image 1"
+                    <div class="vertical"><a href="portfolio-file/portfolio-file/menu1.svg" target="_blank"><img src="portfolio-file/menu1.svg" alt="Image 1"
                                 loading="lazy"></a></div>
-                    <div class="vertical"><a href="menu-02.svg" target="_blank"><img src="menu-02.svg" alt="Image 2"
+                    <div class="vertical"><a href="portfolio-file/menu-02.svg" target="_blank"><img src="portfolio-file/menu-02.svg" alt="Image 2"
                                 loading="lazy"></a></div>
-                    <div class="horizontal"><a href="kera-logo.svg" target="_blank"><img src="kera-logo.svg"
+                    <div class="horizontal"><a href="portfolio-file/kera-logo.svg" target="_blank"><img src="portfolio-file/kera-logo.svg"
                                 alt="Image 3" loading="lazy"></a></div>
 
                     <!-- Row 2: 1 horizontal, 2 vertical -->
-                    <div class="horizontal"><a href="miruna magar.svg" target="_blank"><img src="miruna magar.svg"
+                    <div class="horizontal"><a href="portfolio-file/miruna magar.svg" target="_blank"><img src="portfolio-file/miruna magar.svg"
                                 alt="Image 15" loading="lazy"></a></div>
-                    <div class="vertical"><a href="mockup.png" target="_blank"><img src="mockup.png" alt="Image 9"
+                    <div class="vertical"><a href="portfolio-file/mockup.png" target="_blank"><img src="portfolio-file/mockup.png" alt="Image 9"
                                 loading="lazy"></a></div>
-                    <div class="vertical"><a href="vacline.svg" target="_blank"><img src="vacline.svg" alt="Image 4"
+                    <div class="vertical"><a href="portfolio-file/vacline.svg" target="_blank"><img src="portfolio-file/vacline.svg" alt="Image 4"
                                 loading="lazy"></a></div>
 
                     <!-- Row 3: 2 vertical, 1 horizontal -->
-                    <div class="vertical"><a href="id card frameboxx.svg" target="_blank"><img
-                                src="id card frameboxx.svg" alt="Image 5" loading="lazy"></a></div>
-                    <div class="vertical"><a href="movie poster.png" target="_blank"><img src="movie poster.png"
+                    <div class="vertical"><a href="portfolio-file/id card frameboxx.svg" target="_blank"><img
+                                src="portfolio-file/id card frameboxx.svg" alt="Image 5" loading="lazy"></a></div>
+                    <div class="vertical"><a href="portfolio-file/movie poster.png" target="_blank"><img src="portfolio-file/movie poster.png"
                                 alt="Image 13" loading="lazy"></a></div>
-                    <div class="horizontal"><a href="pen tool lagy.png" target="_blank"><img src="pen tool lagy.png"
+                    <div class="horizontal"><a href="portfolio-file/pen tool lagy.png" target="_blank"><img src="portfolio-file/pen tool lagy.png"
                                 alt="Image 16" loading="lazy"></a></div>
 
 
                     <!-- Row 4: 1 horizontal, 2 vertical -->
-                    <div class="horizontal"><a href="Artboard 1.png" target="_blank"><img src="Artboard 1.png"
+                    <div class="horizontal"><a href="portfolio-file/Artboard 1.png" target="_blank"><img src="portfolio-file/Artboard 1.png"
                                 alt="Image 11" loading="lazy"></a></div>
-                    <div class="vertical"><a href="kera flyer design.png" target="_blank"><img
-                                src="kera flyer design.png" alt="Image 14" loading="lazy"></a></div>
-                    <div class="vertical"><a href="kera brochure sample.png" target="_blank"><img
-                                src="kera brochure sample.png" alt="Image 15" loading="lazy"></a></div>
+                    <div class="vertical"><a href="portfolio-file/kera flyer design.png" target="_blank"><img
+                                src="portfolio-file/kera flyer design.png" alt="Image 14" loading="lazy"></a></div>
+                    <div class="vertical"><a href="portfolio-file/kera brochure sample.png" target="_blank"><img
+                                src="portfolio-file/kera brochure sample.png" alt="Image 15" loading="lazy"></a></div>
 
                     <!-- Row 5: 2 vertical, 1 horizontal -->
                     <div class="vertical">
-                        <a href="Kera flyer.svg" target="_blank">
-                            <img src="Kera flyer.svg" alt="Kera Flyer" loading="lazy"
+                        <a href="portfolio-file/Kera flyer.svg" target="_blank">
+                            <img src="portfolio-file/Kera flyer.svg" alt="Kera Flyer" loading="lazy"
                                 onerror="this.onerror=null;this.src='fallback.png';">
                         </a>
                     </div>
 
-                    <div class="vertical"><a href="Magzine.jpg" target="_blank"><img src="Magzine.jpg" alt="Image 15"
+                    <div class="vertical"><a href="portfolio-file/Magzine.jpg" target="_blank"><img src="portfolio-file/Magzine.jpg" alt="Image 15"
                                 loading="lazy"></a></div>
-                    <div class="horizontal"><a href="thorfin.png" target="_blank"><img src="thorfin.png" alt="Image 8"
+                    <div class="horizontal"><a href="portfolio-file/thorfin.png" target="_blank"><img src="portfolio-file/thorfin.png" alt="Image 8"
                                 loading="lazy"></a></div>
 
 
 
                     <!-- Row 6: 1 horizontal, 2 vertical -->
-                    <div class="horizontal"><a href="Thumbnail.png" target="_blank"><img src="Thumbnail.png"
+                    <div class="horizontal"><a href="portfolio-file/Thumbnail.png" target="_blank"><img src="portfolio-file/Thumbnail.png"
                                 alt="Image 16" loading="lazy"></a></div>
-                    <div class="vertical"><a href="juice ads.png" target="_blank"><img src="juice ads.png"
+                    <div class="vertical"><a href="portfolio-file/juice ads.png" target="_blank"><img src="portfolio-file/juice ads.png"
                                 alt="Image 12" loading="lazy"></a></div>
-                    <div class="vertical"><a href="newspaper-CS4.jpg" target="_blank"><img src="newspaper-CS4.jpg"
+                    <div class="vertical"><a href="portfolio-file/newspaper-CS4.jpg" target="_blank"><img src="portfolio-file/newspaper-CS4.jpg"
                                 alt="Image 15" loading="lazy"></a></div>
 
                     <!-- Row 7: 2 vertical, 1 horizontal -->
-                    <div class="vertical"><a href="dog removed.png" target="_blank"><img src="dog removed.png"
+                    <div class="vertical"><a href="portfolio-file/dog removed.png" target="_blank"><img src="portfolio-file/dog removed.png"
                                 alt="Image 5" loading="lazy"></a></div>
-                    <div class="vertical"><a href="Beach.png" target="_blank"><img src="Beach.png" alt="Image 13"
+                    <div class="vertical"><a href="portfolio-file/Beach.png" target="_blank"><img src="portfolio-file/Beach.png" alt="Image 13"
                                 loading="lazy"></a></div>
-                    <div class="horizontal"><a href="billboard mockup.png" target="_blank"><img
-                                src="billboard mockup.png" alt="Image 16" loading="lazy"></a></div>
+                    <div class="horizontal"><a href="portfolio-file/billboard mockup.png" target="_blank"><img
+                                src="portfolio-file/billboard mockup.png" alt="Image 16" loading="lazy"></a></div>
 
 
                     <!-- Row 8: 1 horizontal, 2 vertical -->
-                    <div class="horizontal"><a href="image restoration.png" target="_blank"><img
-                                src="image restoration.png" alt="Image 16" loading="lazy"></a></div>
+                    <div class="horizontal"><a href="portfolio-file/image restoration.png" target="_blank"><img
+                                src="portfolio-file/image restoration.png" alt="Image 16" loading="lazy"></a></div>
                     <div class="vertical">
-                        <a href="fb post.png" target="_blank">
-                            <img src="fb post.png" alt="Kera Flyer" loading="lazy"
+                        <a href="portfolio-file/fb post.png" target="_blank">
+                            <img src="portfolio-file/fb post.png" alt="Kera Flyer" loading="lazy"
                                 onerror="this.onerror=null;this.src='fallback.png';">
                         </a>
                     </div>
-                    <div class="vertical"><a href="apple manipulation.png" target="_blank"><img
-                                src="apple manipulation.png" alt="Image 15" loading="lazy"></a></div>
+                    <div class="vertical"><a href="portfolio-file/apple manipulation.png" target="_blank"><img
+                                src="portfolio-file/apple manipulation.png" alt="Image 15" loading="lazy"></a></div>
                 </div>
             </div>
         </section>
@@ -419,7 +419,7 @@
                 }
 
                 .projectbg {
-                    background-image: url('rainbow bear.jpg');
+                    background-image: url('portfolio-file/rainbow bear.jpg');
                     background-size: cover;
                     background-position: center;
                     background-repeat: no-repeat;
@@ -544,20 +544,20 @@
             <script>
                 const imageSets = {
                     illustrator: [
-                        "About logo1.png",
-                        "About logo2.png",
-                        "About logo3.png",
-                        "kera-logo.svg"
+                        "portfolio-file/About logo1.png",
+                        "portfolio-file/About logo2.png",
+                        "portfolio-file/About logo3.png",
+                        "portfolio-file/kera-logo.svg"
                     ],
                     photoshop: [
-                        "Product mockup.png",
-                        "Product mockup2.png",
-                        "mockup.png"
+                        "portfolio-file/Product mockup.png",
+                        "portfolio-file/Product mockup2.png",
+                        "portfolio-file/mockup.png"
                     ],
                     indesign: [
-                        "Brochure1.png",
-                        "Brochure2.png",
-                        "kera brochure sample.png"
+                        "portfolio-file/Brochure1.png",
+                        "portfolio-file/Brochure2.png",
+                        "portfolio-file/kera brochure sample.png"
                     ]
                 };
                 document.getElementById("image-viewer").addEventListener("click", function (e) {
@@ -659,22 +659,22 @@
 
                     <div class="content-wrappers community">
                         <h6>Helping people</h6>
-                        <img src="community(without me).jpg" alt="" loading="lazy">
+                        <img src="portfolio-file/community(without me).jpg" alt="" loading="lazy">
                     </div>
 
                     <div class="content-wrappers traveling">
                         <h6>Traveling</h6>
-                        <img src="traveling.jpg" alt="" loading="lazy">
+                        <img src="portfolio-file/traveling.jpg" alt="" loading="lazy">
                     </div>
 
                     <div class="content-wrappers music">
                         <h6>Music</h6>
-                        <img src="music.jpg" alt="Music" loading="lazy">
+                        <img src="portfolio-file/music.jpg" alt="Music" loading="lazy">
                     </div>
 
                     <div class="content-wrappers painting">
                         <h6>Painting</h6>
-                        <img src="painting.jpg" alt="" loading="lazy">
+                        <img src="portfolio-file/painting.jpg" alt="" loading="lazy">
                     </div>
 
                 </div>
