Fix: Corrected typo in target attribute for new tab email link

--- a/index.html
+++ b/index.html
@@ -722,10 +722,9 @@
             <div class="content-wrapper" style="background-color:  #f9f9f9;">
                 <div class="loco">
                     <h1>Where can you find me?</h1>
-                    <button
-                        onclick="window.open('//mail.google.com/mail/u/0/#inbox?compose=CllgCKCJFLVdZmDcRxfmccmRsNrlXMQStJxgWLBDHtKCTPqnwqbJMCxQDnCQhdhlhHpxTtXLvSq', '_blank')">Email
-                        me
-                    </button>
+                  
+                   
+
 
                 </div>
             </div>
@@ -757,9 +756,11 @@
                         <li>🌐 Website UI Graphics</li>
                     </ul>
                 </div>
-                <button class="button-hire">
-                    Hire Me
-                </button>
+          <button class="button-hire">
+    <a href="mailto:snima844@gmail.com?subject=Inquiry%20from%20Portfolio%20Website" style="text-decoration: none; color: inherit; display: block;" target="_blank">
+        Hire Me
+    </a>
+</button>
             </div>
 
         </section>
